--- a/index.html
+++ b/index.html
@@ -13,21 +13,25 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+        <link href="https://file.myfontastic.com/avTDysi8SBg8hT5Vt9BbTf/icons.css" rel="stylesheet">
 	</head>
 	<body>
 
 		<!-- Header -->
 			<header id="header">
-                <svg id="HC_Logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 466.19 466.2"><defs><style>.cls-1{fill:#231f20;fill-rule:evenodd;}</style></defs><title>Untitled-2</title><path class="cls-1" d="M250.18,29.71C128.88,29.71,30.55,128,30.55,249.35S128.88,469,250.18,469s219.64-98.34,219.64-219.64S371.48,29.71,250.18,29.71m0-13.46c-128.73,0-233.1,104.36-233.1,233.09s104.36,233.1,233.1,233.1,233.1-104.37,233.1-233.1S378.92,16.25,250.18,16.25M162.51,256.48c16.41-14.11,33.82-37.25,50.23-66.15,15.47-27.25,28.89-57.57,39.61-87.32,7.18-18.26,12.38-37.41,17.09-56.44,6.12-24.74,5.9-18,6,14.12,0.07,24.5,6.11,47.72,12.42,68.39,8.36,27.37,24.49,62.13,49.58,74.29,2,1,9.08,2.46,4.28,5C289.47,236,226.22,255.71,165.13,264.15c-19.77,2.73-16.5,4.25-2.62-7.67M331.35,411.33a184.79,184.79,0,0,0-144.4,0,192,192,0,0,0-44.14,26.52,141.32,141.32,0,0,0,14-25.26,133.41,133.41,0,0,0,10.7-53.28,135,135,0,0,0-7.2-44.22l0-.09c-0.15-.45-0.31-0.89-0.47-1.35l-0.09-.24-0.06-.18-0.13-.36-0.07-.19-0.07-.17h0l-0.12-.32-0.2-.53-0.09-.23-0.07-.19-0.14-.36-0.05-.14,0,0-0.27-.7-0.06-.15-0.26-.65v0l0-.09-0.24-.58-0.09-.22-0.25-.63,0,0-0.28-.67-0.06-.15-0.32-.74-0.29-.67-0.1-.23-0.22-.51-0.09-.2-0.28-.64-0.12-.26-0.18-.39-0.14-.31-0.28-.6-0.08-.17-0.27-.58-0.07-.13-0.25-.53-0.14-.29-0.26-.53-0.11-.22-0.25-.52-0.07-.15-0.35-.69,0-.06-0.34-.67,0-.05-0.36-.71h0l-0.35-.66-0.08-.15-0.7-1.32-0.14-.25-0.2-.36-0.15-.28-0.34-.62,0-.08-0.33-.59-0.08-.13-0.75-1.32-0.1-.17-0.31-.54-0.06-.1c-0.25-.44-0.52-0.88-0.78-1.32l-0.08-.13-0.36-.59,0,0h0l-0.06-.1-0.32-.52-0.13-.2-0.3-.49-0.08-.12-0.38-.61-0.11-.16-0.33-.52-0.07-.11-0.41-.64,0-.08-0.35-.53L145,284l-0.29-.45-0.17-.26-0.32-.47-0.15-.22-0.28-.43-0.11-.16-0.43-.63v0l-0.41-.59-0.08-.12-0.42-.6,0,0,0-.06-0.37-.52-0.13-.18-0.4-.56v0l-0.45-.61-0.09-.12-0.41-.56,0,0-0.93-1.23L139.3,276l-1-1.23,0,0-0.41-.51-0.14-.18v0a8,8,0,0,1,1.64-.3c71.49-6.75,146.76-28.08,208.41-59.82,1.06-.54,1.94-1,2.65-1.27a197.81,197.81,0,0,0-13.13,25.2,184.79,184.79,0,0,0,0,144.4A190.75,190.75,0,0,0,370,433.6a193.48,193.48,0,0,0-38.64-22.26" transform="translate(-17.08 -16.25)"/></svg>
+                <i class="icon-hedgesville-church"></i>
 				<h1>God is Alive</h1>
 				<p>An album of worship songs written and performed by the Hedgesville Church worship team.</p>
 			</header>
 
-		<!-- Signup Form -->
-			<form id="signup-form" method="post" action="#">
-				<input type="email" name="email" id="email" placeholder="Email Address" />
-				<input type="submit" value="Sign Up" />
-			</form>
+		<!-- Downloads -->
+			<section>
+                <ul>
+                    <li><a href="#" title="Buy God is Alive on iTunes"><i class="icon-itunes"></i></a></li>
+                    <li><a href="#" title="Buy God is Alive on Amazon"><i class="icon-amazon"></i></a></li>
+                    <li><a href="#" title="Listen to God is Alive on Spotify"><i class="icon-spotify"></i></a></li>
+                </ul>
+            </section>
 
 		<!-- Footer -->
 			<footer id="footer">
