#downloads ID added to downloads section on index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			</header>
 
 		<!-- Downloads -->
-			<section>
+			<section id="downloads">
                 <ul>
                     <li><a href="#" title="Buy God is Alive on iTunes"><i class="icon-itunes"></i></a></li>
                     <li><a href="#" title="Buy God is Alive on Amazon"><i class="icon-amazon"></i></a></li>
