--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 		<!-- Downloads -->
 			<section id="downloads">
                 <ul>
-                    <li><a href="#" title="Buy God is Alive on iTunes"><i class="icon-itunes"></i></a></li>
-                    <li><a href="#" title="Buy God is Alive on Amazon"><i class="icon-amazon"></i></a></li>
-                    <li><a href="#" title="Listen to God is Alive on Spotify"><i class="icon-spotify"></i></a></li>
+                    <li><a href="https://apple.com/itunes/godisalive" title="Buy God is Alive on iTunes"><i class="icon-itunes"></i></a></li>
+                    <li><a href="https://amazon.com/godisalive" title="Buy God is Alive on Amazon"><i class="icon-amazon"></i></a></li>
+                    <li><a href="https://spotify.com/godisalive" title="Listen to God is Alive on Spotify"><i class="icon-spotify"></i></a></li>
                 </ul>
             </section>
 
