--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<!-- Downloads -->
 			<section id="downloads">
                 <ul>
-                    <li>Buy Now:</li>
+                    <li><strong>Available on:</strong></li>
                     <li><a href="https://apple.com/itunes/godisalive" title="Buy God is Alive on iTunes"><i class="icon-itunes"></i></a></li>
                     <li><a href="https://amazon.com/godisalive" title="Buy God is Alive on Amazon"><i class="icon-amazon"></i></a></li>
                     <li><a href="https://spotify.com/godisalive" title="Listen to God is Alive on Spotify"><i class="icon-spotify"></i></a></li>
