--- a/index.html
+++ b/index.html
@@ -37,10 +37,9 @@
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+					<li><a href="https://facebook.com/HedgesvilleChurch" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="https://www.instagram.com/hedgesvillechurch/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="https://vimeo.com/164889611" class="icon fa-vimeo"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
                     <li>&copy; 2016 - <a href="http://hedgesville.church" title="Hedgesville Church, Hedgesville, WV">Hedgesville Church, Hedgesville, WV</a></li>
